--- a/playbooks/vsphere/pb.inventory.yml
+++ b/playbooks/vsphere/pb.inventory.yml
@@ -1,12 +1,24 @@
 ---
 - name: "VCENTER INFORMATION & TESTS"
   hosts: "CrunchyCluster"
-  gather_facts: false
-
+  gather_facts: true
   tasks:
     - name: "DEBUG"
       ansible.builtin.debug:
         msg: "{{ inventory_hostname }}"
-    - name: "DEBUG"
-      ansible.builtin.debug:
-        msg: "{{ ansible_host }}"
+      tags:
+        - "debug"
+
+    - name: "UPDATE ALL PACKAGES"
+      ansible.builtin.apt:
+        name: "*"
+        state: "latest"
+      become: true
+      when: "ansible_facts['distribution'] == 'Ubuntu'"
+
+    - name: "INSTALL SPECIFIC PACKAGES DEFINED"
+      ansible.builtin.apt:
+        pkg:
+          - "network-manager"
+        state: "latest"
+      become: true
