--- a/playbooks/vsphere/pb.inventory.yml
+++ b/playbooks/vsphere/pb.inventory.yml
@@ -3,26 +3,28 @@
   hosts: "CrunchyCluster"
   gather_facts: true
   tasks:
-    - name: "DEBUG"
-      ansible.builtin.debug:
-        msg: "{{ inventory_hostname }}"
-      tags:
-        - "debug"
+    - name: "UPDATE UBUNTU BOXES"
+      block:
+        - name: "DEBUG"
+          ansible.builtin.debug:
+            msg: "{{ inventory_hostname }}"
+          tags:
+            - "debug"
 
-    - name: "UPDATE ALL PACKAGES"
-      ansible.builtin.apt:
-        name: "*"
-        state: "latest"
-      become: true
+        - name: "UPDATE ALL PACKAGES"
+          ansible.builtin.apt:
+            name: "*"
+            state: "latest"
+          become: true
+
+        - name: "INSTALL SPECIFIC PACKAGES DEFINED"
+          ansible.builtin.apt:
+            pkg:
+              - "network-manager"
+              - "ca-certificates"
+              - "curl"
+              - "gnupg"
+              - "lsb-release"
+            state: "latest"
+          become: true
       when: "ansible_facts['distribution'] == 'Ubuntu'"
-
-    - name: "INSTALL SPECIFIC PACKAGES DEFINED"
-      ansible.builtin.apt:
-        pkg:
-          - "network-manager"
-          - "ca-certificates"
-          - "curl"
-          - "gnupg"
-          - "lsb-release"
-        state: "latest"
-      become: true
